# yaddle

./: README.md  example.py  pyproject.toml  test_file.yoda
src/yaddle/: parser.py
